footer, about, precio, servicios

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,42 @@
+$credit-color-principal:  #0062E6;;
+$credit-color-pricipal-primary: $credit-color-principal;
+$credit-color-pricipal-second:rgba(46, 115, 179, 1); /*Color extraido de la imagen del logo*/
+$credit-color-pricipal-third: #007bff;
+$credit-color-pricipal-fourt: #33AEFF;
+
+
+$credit-color-second: rgba(115, 173, 66, 1); /*Color extraido de la imagen del logo*/
+
+
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.btn-credit-principal {
+    background-color: $credit-color-principal !important;
+}
+.btn-credit-second {
+    background-color: $credit-color-second !important;
+}
+
+.credit-background-color-primary {
+    background-color: $credit-color-principal;
+}
+
+.credit-background-color-second {
+    background-color: $credit-color-second;
+}
+
+.credit-text-color-primary {
+    color: $credit-color-principal !important;
+}
+
+.credit-text-color-second {
+    color: $credit-color-second !important;
+}
+
+.credit-text-color-third {
+    color: $credit-color-pricipal-third !important;
+}
