--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,1 +1,117 @@
 <app-carausel></app-carausel>
+<app-about></app-about>
+<app-servs></app-servs>
+
+<!--PARALLAX-->
+
+<section class="parallax" id="secction1"></section>
+
+<!-- /PARALLAX-->
+
+<div class="container marketing mt-5">
+  <div class="row featurette mt-5">
+    <div class="col-md-7">
+      <h2 class="featurette-heading credit-text-color-primary">
+        First featurette heading.
+        <span class="text-muted credit-text-color-second"
+          >It’ll blow your mind.</span
+        >
+      </h2>
+      <p class="lead">
+        Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
+        porta felis euismod semper. Praesent commodo cursus magna, vel
+        scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.ng
+      </p>
+    </div>
+    <div class="col-md-5">
+      <svg
+        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+        width="500"
+        height="500"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="xMidYMid slice"
+        focusable="false"
+        role="img"
+        aria-label="Placeholder: 500x500"
+      >
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="#eee"></rect>
+        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+      </svg>
+    </div>
+  </div>
+
+  <hr class="featurette-divider mt-5" />
+
+  <div class="row featurette mt-5">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading credit-text-color-primary">
+        Oh yeah, it’s that good.
+        <span class="text-muted credit-text-color-second"
+          >See for yourself.</span
+        >
+      </h2>
+      <p class="lead">
+        Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
+        porta felis euismod semper. Praesent commodo cursus magna, vel
+        scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+      </p>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <svg
+        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+        width="500"
+        height="500"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="xMidYMid slice"
+        focusable="false"
+        role="img"
+        aria-label="Placeholder: 500x500"
+      >
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="#eee"></rect>
+        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+      </svg>
+    </div>
+  </div>
+
+  <hr class="featurette-divider mt-5" />
+
+  <div class="row featurette mt-5">
+    <div class="col-md-7">
+      <h2 class="featurette-heading credit-text-color-primary">
+        First featurette heading.
+        <span class="text-muted credit-text-color-second"
+          >It’ll blow your mind.</span
+        >
+      </h2>
+      <p class="lead">
+        Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
+        porta felis euismod semper. Praesent commodo cursus magna, vel
+        scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+      </p>
+    </div>
+    <div class="col-md-5">
+      <svg
+        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+        width="500"
+        height="500"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="xMidYMid slice"
+        focusable="false"
+        role="img"
+        aria-label="Placeholder: 500x500"
+      >
+        <title>Placeholder</title>
+        <rect width="100%" height="100%" fill="#eee"></rect>
+        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+      </svg>
+    </div>
+  </div>
+</div>
+
+<section class="parallax mt-5" id="secction2"></section>
+
+<app-precio></app-precio>
+
+<app-footer></app-footer>
