--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -8,7 +8,7 @@
           <div>
             <div>
               <a href="#">
-                <img src="../../../assets/img/about/1.jpg" alt="" class="img-fluid" />
+                <img src="assets/img/about/1.jpg" alt="" class="img-fluid" />
               </a>
             </div>
           </div>
