--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,22 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow p-3 mb-5 bg-white rounded">
-  <a class="navbar-brand" href="#"> <strong class="credit-text-color-primary">Crédito</strong>   <i class="credit-text-color-second">OnLine</i> </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <a matRipple matRippleCentered = "true" class="navbar-brand" href="#"> <strong class="credit-text-color-primary">Crédito</strong>   <i class="credit-text-color-second">OnLine</i> </a>
+  <button matRipple class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive ="active" >
+        <a 
+          class="nav-link" 
+          routerLink = "/home">Home <span class="sr-only">(current)</span></a>
       </li>
      
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li class="nav-item dropdown" routerLinkActive="active">
+        <a class="nav-link dropdown-toggle" 
+          href="#" 
+          id="navbarDropdownMenuLink" 
+          role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Tarjetas de Crédito
         </a>
-        <div   class="dropdown-menu  animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+        <div   
+          class="dropdown-menu  animate__animated animate__fadeInDown animate__faster" 
+          aria-labelledby="navbarDropdownMenuLink">
+          <a 
+            matRipple 
+            matRippleCentered = "true"
+            class="dropdown-item" 
+            routerLink = "/tarjetas">Shop credit Card</a>
+          <a 
+            matRipple 
+            matRippleCentered = "true"
+            class="dropdown-item" 
+            href="#">Business card</a>
+          <a 
+            matRipple 
+            matRippleCentered = "true"
+            class="dropdown-item" 
+            href="#">Travel card</a>
         </div>
       </li>
       <li class="nav-item dropdown">
