--- a/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
+++ b/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
@@ -35,36 +35,20 @@
  
 </div>
 
-
 <div class="container">
-    <div class="row">
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
+  <div class="row">
+    <div class="col-12">
+      <app-tarjetav2></app-tarjetav2>
     </div>
-    <div class="row">
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <app-tarjeta></app-tarjeta>
-        </div>
+    <div class="col-12">
+      <app-tarjetav2></app-tarjetav2>
     </div>
+    <div class="col-12">
+      <app-tarjetav2></app-tarjetav2>
+    </div>
+  </div>
 </div>
+
+
 
 
