Se agregan imagenes.

--- a/src/app/components/tc/tarjetav2/tarjetav2.component.html
+++ b/src/app/components/tc/tarjetav2/tarjetav2.component.html
@@ -6,8 +6,8 @@
     (mouseleave) = "mouseIsOver = false"
     [ngClass]  = "{ 'tc-over' : mouseIsOver, 'tc-not-over': ! mouseIsOver }">
   <div class="row">
-    <div class="col-3">
-      <div class="card m-3" style="width: 12rem; border: none !important">
+    <div class="col-lg-3 col-md-3 center">
+      <div class="card m-3" style=" border: none !important">
         <img
           src="assets/img/TC/bancomer/tarjeta-infinite-card.png"
           class="card-img-top"
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="col-9 pt-3 pr-5">
+    <div class="col-lg-9 col-md-9 col-sm-12 p-5">
       <h4>Bancomer</h4>
       <h3>Bancomer Black</h3>
       <p class="font-weight-lighter text-justify font-">
@@ -44,32 +44,39 @@
       </p>
       <hr />
       <div class="row">
-        <div class="col-12  pl-0 ml-0">
-          <div class="d-flex flex-row m-3 text-justify">
-            <div
-              class="pr-2 border-right"
-              style="width: 33% !important">
-              <ul class="text-muted">
-                <li> <small>  Paga en miles de comercios en todo el mundo</small></li>
-                <li><small>El 9% de tus compras en Puntos BBVA</small></li>
-              </ul>
-            </div>
-            <div
-              class="pr-2 border-right"
-              style="width: 33% !important"
-            >
-            <ul class="text-muted">
-                <li><small>Ofertas de estreno al contratar</small></li>
-                <li><small>El 9% de tus compras en Puntos BBVA</small></li>
-              </ul>
-            </div>
-            <div class="pr-2" style="width: 33% !important">
-                <ul class="text-muted">
-                    <li> <small>  Paga en miles de comercios en todo el mundo</small></li>
-                </ul>
-            </div>
-          </div>
+        <div class="col-md-4 border-left ">
+          <ul class="text-muted">
+            <li>
+              <i class="fa fa-check credit-text-color-second"></i>
+              <small> Paga en miles de comercios en todo el mundo</small>
+            </li>
+            <li>
+              <i class="fa fa-check credit-text-color-second"></i>
+              <small> El 9% de tus compras en Puntos BBVA</small>
+            </li>
+          </ul>
         </div>
+        <div class="col-md-4 border-left ">
+          <ul class="text-muted">
+                <li>
+                  <i class="fa fa-check credit-text-color-second"></i>
+                  <small> Paga en miles de comercios en todo el mundo</small>
+                </li>
+                <li>
+                  <i class="fa fa-check credit-text-color-second"></i>
+                  <small> El 9% de tus compras en Puntos BBVA</small>
+                </li>
+              </ul>
+        </div>
+        <div class="col-md-4 border-left">
+          <ul class="text-muted">
+                <li>
+                  <i class="fa fa-check credit-text-color-second"></i>
+                  <small> Paga en miles de comercios en todo el mundo</small>
+                </li>
+              </ul>
+        </div>
+       
       </div>
     </div>
 
