--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -4,17 +4,17 @@
       
       <div class="row">
         <!-- single-well start-->
-        <div class="col ">
+        <div class="col-md-6 col-sm-12 mt-5">
           <div>
             <div>
               <a href="#">
-                <img src="assets/img/about/1.jpg" alt="" class="img-fluid" />
+                <img src="assets/img/background/bg2.jpg" alt="" class="img-fluid" />
               </a>
             </div>
           </div>
         </div>
         <!-- single-well end-->
-        <div class="col ">
+        <div class="col-md-6 col-sm-12 mt-5">
           <div class="well-middle">
             <div class="single-well">
               <a href="#">
