--- a/src/app/pages/home/home/home.component.scss
+++ b/src/app/pages/home/home/home.component.scss
@@ -13,9 +13,11 @@ section {
 }
 
 #secction1 {
-    background-image: url('../../../../assets/img/background/bg1.jpg');
+    background-image: url('../../../../assets/img/background/bg3.jpg');
+    height: 25em !important;
 }
 #secction2 {
-    background-image: url('../../../../assets/img/background/slider1.jpg');
+    background-image: url('../../../../assets/img/background/bg6.jpg');
+    height: 25em !important;
 }
 
