--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -4,7 +4,7 @@
 
 <!--PARALLAX-->
 
-<section class="parallax" id="secction1"></section>
+<section class="parallax" id="secction1"> </section>
 
 <!-- /PARALLAX-->
 
@@ -23,21 +23,8 @@
         scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.ng
       </p>
     </div>
-    <div class="col-md-5">
-      <svg
-        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-        width="500"
-        height="500"
-        xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="xMidYMid slice"
-        focusable="false"
-        role="img"
-        aria-label="Placeholder: 500x500"
-      >
-        <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#eee"></rect>
-        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-      </svg>
+    <div class="col-md-5">     
+      <img src="assets/img/background/bg2.jpg" class="rounded mx-auto d-block img-fluid" alt="...">
     </div>
   </div>
 
@@ -58,20 +45,7 @@
       </p>
     </div>
     <div class="col-md-5 order-md-1">
-      <svg
-        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-        width="500"
-        height="500"
-        xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="xMidYMid slice"
-        focusable="false"
-        role="img"
-        aria-label="Placeholder: 500x500"
-      >
-        <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#eee"></rect>
-        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-      </svg>
+      <img src="assets/img/background/bg4.jpg" class="rounded mx-auto d-block img-fluid" alt="...">
     </div>
   </div>
 
@@ -92,20 +66,7 @@
       </p>
     </div>
     <div class="col-md-5">
-      <svg
-        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-        width="500"
-        height="500"
-        xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="xMidYMid slice"
-        focusable="false"
-        role="img"
-        aria-label="Placeholder: 500x500"
-      >
-        <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#eee"></rect>
-        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-      </svg>
+      <img src="assets/img/background/bg5.jpg" class="rounded mx-auto d-block img-fluid" alt="...">
     </div>
   </div>
 </div>
