--- a/src/app/pages/home/servs/servs.component.html
+++ b/src/app/pages/home/servs/servs.component.html
@@ -1,125 +1,142 @@
-  <!-- Start Service area -->
-  <div id="services" class="services-area area-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline services-head text-center credit-text-color-primary">
-            <h2>Nuestros Servicios</h2>
-          </div>
+<!-- Start Service area -->
+<div id="services" class="services-area area-padding p-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div
+          class="section-headline services-head text-center credit-text-color-primary"
+        >
+          <h2>Nuestros Servicios</h2>
         </div>
       </div>
-      <div class="row text-center">
-          <div class="row">
-               <!--Tarjetas de credito-->
-              <div class="col">
-                <div class="about-move credit-text-color-primary">
-                    <div class="services-details credit-text-color-primary">
-                      <div class="single-services credit-text-color-primary">
-                          <a class="services-icon" href="#">
-                              <i class="fa fa-credit-card"></i>
-                          </a>
-                        <h4>Tarjetas de crédito</h4>
-                        <p>
-                          will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
-                        </p>
-                      </div>
-                    </div>
-                    <!-- end about-details -->
-                </div>
-              </div><!--/Tarjetas de credito-->
-              
-              <!--Autos-->
-              <div class="col">
-                <div class="about-move credit-text-color-primary">
-                    <div class="services-details credit-text-color-primary">
-                      <div class="single-services credit-text-color-primary">
-                          <a class="services-icon" href="#">
-                              <i class="fa fa-car"></i>
-                          </a>
-                        <h4>Crédito Autos</h4>
-                        <p>
-                          will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
-                        </p>
-                      </div>
-                    </div>
-                    <!-- end about-details -->
-                </div>
-              </div><!--/ Autos-->
-              <!--casa-->
-              <div class="col">
-                <div class="about-move ">
-                    <div class="services-details ">
-                      <div class="single-services">
-                          <a class="services-icon" href="#">
-                              <i class="fa fa-home"></i>
-                          </a>
-                        <h4>Créditos Hipotecarios</h4>
-                        <p>
-                          will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
-                        </p>
-                      </div>
-                    </div>
-                    <!-- end about-details -->
-                </div>
-              </div><!--/ casa-->
+    </div>
+    <div class="row text-center">
+      <div class="row">
+        <!--Tarjetas de credito-->
+        <div class="col-md-4 col-sm-5">
+          <div class="about-move credit-text-color-primary">
+            <div class="services-details credit-text-color-primary">
+              <div class="single-services credit-text-color-primary">
+                <a class="services-icon" href="#">
+                  <i class="fa fa-credit-card"></i>
+                </a>
+                <h4 class="credit-text-color-primary">Tarjetas de crédito</h4>
+                <p class="text-justify credit-text-color-second">
+                  will have to make sure the prototype looks finished by
+                  inserting text or photo.make sure the prototype looks finished
+                  by.
+                </p>
+              </div>
+            </div>
+            <!-- end about-details -->
           </div>
+        </div>
+        <!--/Tarjetas de credito-->
 
-          <div class="row">
-            <!--Tarjetas de credito-->
-           <div class="col">
-             <div class="about-move credit-text-color-primary">
-                 <div class="services-details credit-text-color-primary">
-                   <div class="single-services credit-text-color-primary">
-                       <a class="services-icon" href="#">
-                           <i class="fa fa-heartbeat"></i>
-                       </a>
-                     <h4>Seguros de Vida</h4>
-                     <p>
-                       will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
-                     </p>
-                   </div>
-                 </div>
-                 <!-- end about-details -->
-             </div>
-           </div><!--/Tarjetas de credito-->
-           
-           <!--Autos-->
-           <div class="col">
-             <div class="about-move credit-text-color-primary">
-                 <div class="services-details credit-text-color-primary">
-                   <div class="single-services credit-text-color-primary">
-                       <a class="services-icon" href="#">
-                           <i class="fa fa-money"></i>
-                       </a>
-                     <h4>Créditos Personales</h4>
-                     <p>
-                       will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
-                     </p>
-                   </div>
-                 </div>
-                 <!-- end about-details -->
-             </div>
-           </div><!--/ Autos-->
-           <!--casa-->
-           <div class="col">
-             <div class="about-move ">
-                 <div class="services-details ">
-                   <div class="single-services">
-                       <a class="services-icon" href="#">
-                           <i class="fa fa-ambulance"></i>
-                       </a>
-                     <h4>Asistencia Médica</h4>
-                     <p>
-                       will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
-                     </p>
-                   </div>
-                 </div>
-                 <!-- end about-details -->
-             </div>
-           </div><!--/ casa-->
-       </div>
-        
+        <!--Autos-->
+        <div class="col-md-4 col-sm-5">
+          <div class="about-move credit-text-color-primary">
+            <div class="services-details credit-text-color-primary">
+              <div class="single-services credit-text-color-primary">
+                <a class="services-icon" href="#">
+                  <i class="fa fa-car"></i>
+                </a>
+                <h4 class="credit-text-color-primary">Crédito Autos</h4>
+                <p class="text-justify">
+                  will have to make sure the prototype looks finished by
+                  inserting text or photo.make sure the prototype looks finished
+                  by.
+                </p>
+              </div>
+            </div>
+            <!-- end about-details -->
+          </div>
+        </div>
+        <!--/ Autos-->
+        <!--casa-->
+        <div class="col-md-4 col-sm-12">
+          <div class="about-move">
+            <div class="services-details">
+              <div class="single-services">
+                <a class="services-icon" href="#">
+                  <i class="fa fa-home"></i>
+                </a>
+                <h4 class="credit-text-color-primary">Créditos Hipotecarios</h4>
+                <p class="text-justify credit-text-color-second">
+                  will have to make sure the prototype looks finished by
+                  inserting text or photo.make sure the prototype looks finished
+                  by.
+                </p>
+              </div>
+            </div>
+            <!-- end about-details -->
+          </div>
+        </div>
+        <!--/ casa-->
+
+        <!--Tarjetas de credito-->
+        <div class="col-md-4 col-sm-5">
+          <div class="about-move credit-text-color-primary">
+            <div class="services-details credit-text-color-primary">
+              <div class="single-services credit-text-color-primary">
+                <a class="services-icon" href="#">
+                  <i class="fa fa-heartbeat"></i>
+                </a>
+                <h4 class="credit-text-color-primary">Seguros de Vida</h4>
+                <p class="text-justify credit-text-color-second">
+                  will have to make sure the prototype looks finished by
+                  inserting text or photo.make sure the prototype looks finished
+                  by.
+                </p>
+              </div>
+            </div>
+            <!-- end about-details -->
+          </div>
+        </div>
+        <!--/Tarjetas de credito-->
+
+        <!--Autos-->
+        <div class="col-md-4 col-sm-5">
+          <div class="about-move credit-text-color-primary">
+            <div class="services-details credit-text-color-primary">
+              <div class="single-services credit-text-color-primary">
+                <a class="services-icon" href="#">
+                  <i class="fa fa-money"></i>
+                </a>
+                <h4 class="credit-text-color-primary">Créditos Personales</h4>
+                <p class="text-justify credit-text-color-second">
+                  will have to make sure the prototype looks finished by
+                  inserting text or photo.make sure the prototype looks finished
+                  by.
+                </p>
+              </div>
+            </div>
+            <!-- end about-details -->
+          </div>
+        </div>
+        <!--/ Autos-->
+        <!--casa-->
+        <div class="col-md-4 col-sm-5">
+          <div class="about-move">
+            <div class="services-details">
+              <div class="single-services">
+                <a class="services-icon" href="#">
+                  <i class="fa fa-ambulance"></i>
+                </a>
+                <h4 class="credit-text-color-primary">Asistencia Médica</h4>
+                <p class="text-justify credit-text-color-second">
+                  will have to make sure the prototype looks finished by
+                  inserting text or photo.make sure the prototype looks finished
+                  by.
+                </p>
+              </div>
+            </div>
+            <!-- end about-details -->
+          </div>
+        </div>
+        <!--/ casa-->
       </div>
     </div>
   </div>
-  <!-- End Service area -->
+</div>
+<!-- End Service area -->
