--- a/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
+++ b/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
@@ -7,7 +7,7 @@
       <!-- INGRESO MENSUAL -->
       <mat-card class="mb-3">
         <div class="row">
-          <div class="col-2">
+          <div class="col-md-2 col-sm-12">
             <p>
               Ingreso mensual:
               <strong class="credit-text-color-second">
@@ -15,7 +15,7 @@
               </strong>
             </p>
           </div>
-          <div class="col-10">
+          <div class="col-md-10 col-sm-12">
             <mat-slider
               thumbLabel
               [displayWith]="formatLabel"
