--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,5 +1,22 @@
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    Bootstrap
+  </a>
+</nav>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow p-3 mb-5 bg-white rounded">
-  <a matRipple matRippleCentered = "true" class="navbar-brand" href="#"> <strong class="credit-text-color-primary">Crédito</strong>   <i class="credit-text-color-second">OnLine</i> </a>
+  <!-- <a matRipple matRippleCentered = "true" class="navbar-brand" href="#"> <strong class="credit-text-color-primary">
+    Crédito</strong>   <i class="credit-text-color-second">OnLine</i> 
+  </a> -->
+
+  <a class="navbar-brand" href="#">
+    <img src="../../../assets/img/co.png" width="100" height="33" class="d-inline-block align-top" alt="" loading="lazy">
+    
+  </a>
+
+
   <button matRipple class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
