--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -22,19 +22,23 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive ="active" >
-        <a 
+        <!-- <a 
           class="nav-link" 
           routerLink = "/home">Home <span class="sr-only">(current)</span></a>
-      </li>
+      </li> -->
      
-      <li class="nav-item dropdown" routerLinkActive="active">
-        <a class="nav-link dropdown-toggle" 
+      <li 
+        class="nav-item dropdown" 
+        mat-ripple
+        matRippleCentered="true"
+        routerLinkActive="active">
+        <a class="nav-link " 
           href="#" 
           id="navbarDropdownMenuLink" 
           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Tarjetas de Crédito
         </a>
-        <div   
+        <!-- <div   
           class="dropdown-menu  animate__animated animate__fadeInDown animate__faster" 
           aria-labelledby="navbarDropdownMenuLink">
           <a 
@@ -52,27 +56,35 @@
             matRippleCentered = "true"
             class="dropdown-item" 
             href="#">Travel card</a>
-        </div>
+        </div> -->
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+      
+      <li 
+        class="nav-item dropdown"
+        mat-ripple
+        matRippleCentered="true">
+        <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Autos
         </a>
-        <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
+        <!-- <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        </div> -->
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li 
+        mat-ripple
+        matRippleCentered="true"
+        class="nav-item dropdown">
+        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Prestamos
         </a>
-        <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
+        <!-- <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        </div> -->
       </li>
     </ul>
   </div>
