--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -12,8 +12,11 @@
         <img class="d-block w-100 img-fluid" src="assets/img/slider/2.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 img-fluid" src="assets/img/background/bg5.jpg" alt="Third slide">
+        <img class="d-block w-100 img-fluid" src="assets/img/slider/4.jpg" alt="Third slide">
       </div>
+      <!-- <div class="carousel-item">
+        <img class="d-block w-100 img-fluid" src="assets/img/background/bg5.jpg" alt="Third slide">
+      </div> -->
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
