Ajustes varios, trello: Pendientes Desktop Septiembre 1

--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -6,13 +6,25 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100 img-fluid" src="assets/img/slider/1.jpg" alt="First slide">
+        <img class="d-block w-100 img-fluid" src="assets/img/slider/4.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="sombra-negra">First slide label</h2>
+          <p class="sombra-negra">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100 img-fluid" src="assets/img/slider/2.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="sombra-blanco"> First slide label</h2>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 img-fluid" src="assets/img/slider/4.jpg" alt="Third slide">
+        <img class="d-block w-100 img-fluid" src="assets/img/slider/1.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="sombra-negra">First slide label</h2>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
       </div>
       <!-- <div class="carousel-item">
         <img class="d-block w-100 img-fluid" src="assets/img/background/bg5.jpg" alt="Third slide">
