--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,10 +1,11 @@
 <app-carausel></app-carausel>
-<app-about></app-about>
 <app-servs></app-servs>
+
+<!-- <app-about></app-about> -->
 
 <!--PARALLAX-->
 
-<section class="parallax" id="secction1"> </section>
+<section class="parallax pt-5" id="secction1"> </section>
 
 <!-- /PARALLAX-->
 
