--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -12,7 +12,7 @@
   </a> -->
 
   <a class="navbar-brand" href="#">
-    <img src="assets/img/co.png" width="150" height="50" class="d-inline-block align-top" alt="" loading="lazy">    
+    <img src="assets/img/credit_online_7.png" width="200" height="66" class="d-inline-block align-top" alt="" loading="lazy">    
   </a>
 
 
@@ -33,7 +33,7 @@
         matRippleCentered="true"
         routerLinkActive="active">
         <a class="nav-link " 
-          href="#" 
+        routerLink = "/tarjetas"
           id="navbarDropdownMenuLink" 
           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Tarjetas de Crédito
@@ -60,19 +60,19 @@
       </li>
 
       
-      <li 
+      <!-- <li 
         class="nav-item dropdown"
         mat-ripple
         matRippleCentered="true">
         <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Autos
         </a>
-        <!-- <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
-        </div> -->
-      </li>
+        </div> 
+      </li> -->
       <li 
         mat-ripple
         matRippleCentered="true"
