--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -1,5 +1,5 @@
   <!-- Start About area -->
-  <div id="about" class="about-area area-padding pt-5">
+  <div id="about" class="about-area area-padding pt-5 pb-5">
     <div class="container">
       
       <div class="row">
