--- a/src/app/pages/home/footer/footer.component.scss
+++ b/src/app/pages/home/footer/footer.component.scss
@@ -3,15 +3,15 @@
 
 .footer-area {
     padding: 40px 0;
-    background: #f9f9f9;
+    background: #404345;
   }
   
   .footer-head p {
-    color: #444;
+    color: white;
   }
   
   .footer-head h4 {
-    color: #444;
+    color: white;
     font-size: 16px;
     letter-spacing: 2px;
     padding-bottom: 10px;
@@ -23,7 +23,7 @@
   }
   
   .footer-logo h2 {
-    color: #222;
+    color: white;
     padding: 0;
     margin: 0;
     font-size: 36px;
