--- a/src/app/pages/home/servs/servs.component.html
+++ b/src/app/pages/home/servs/servs.component.html
@@ -4,8 +4,7 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div
-          class="section-headline services-head text-center credit-text-color-primary"
-        >
+          class="section-headline services-head text-center credit-text-color-primary" >
           <h2>Nuestros Servicios</h2>
         </div>
       </div>
@@ -21,7 +20,7 @@
                   <i class="fa fa-credit-card"></i>
                 </a>
                 <h4 class="credit-text-color-primary">Tarjetas de crédito</h4>
-                <p class="text-justify credit-text-color-second">
+                <p class="text-justify">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
                   by.
@@ -62,7 +61,7 @@
                   <i class="fa fa-home"></i>
                 </a>
                 <h4 class="credit-text-color-primary">Créditos Hipotecarios</h4>
-                <p class="text-justify credit-text-color-second">
+                <p class="text-justify">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
                   by.
@@ -83,7 +82,7 @@
                   <i class="fa fa-heartbeat"></i>
                 </a>
                 <h4 class="credit-text-color-primary">Seguros de Vida</h4>
-                <p class="text-justify credit-text-color-second">
+                <p class="text-justify ">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
                   by.
@@ -104,7 +103,7 @@
                   <i class="fa fa-money"></i>
                 </a>
                 <h4 class="credit-text-color-primary">Créditos Personales</h4>
-                <p class="text-justify credit-text-color-second">
+                <p class="text-justify">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
                   by.
@@ -121,10 +120,10 @@
             <div class="services-details">
               <div class="single-services">
                 <a class="services-icon" href="#">
-                  <i class="fa fa-ambulance"></i>
+                  <i class="fa fa-book"></i>
                 </a>
-                <h4 class="credit-text-color-primary">Asistencia Médica</h4>
-                <p class="text-justify credit-text-color-second">
+                <h4 class="credit-text-color-primary">Asesoria financiera</h4>
+                <p class="text-justify">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
                   by.
