--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,12 +9,7 @@ $credit-color-pricipal-second: rgba(
 $credit-color-pricipal-third: #007bff;
 $credit-color-pricipal-fourt: #33aeff;
 
-$credit-color-second: rgba(
-  115,
-  173,
-  66,
-  1
-); /*Color extraido de la imagen del logo*/
+$credit-color-second: #6FFF39;//rgba( 115, 173, 66,  1); /*Color extraido de la imagen del logo*/
 
 /* You can add global styles to this file, and also import other style files */
 
