--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -1,41 +1,67 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100 img-fluid" src="assets/img/slider/4.jpg" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="sombra-negra">First slide label</h2>
-          <p class="sombra-negra">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        class="d-block w-100 img-fluid"
+        src="assets/img/slider/4.jpg"
+        alt="First slide"
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Tarjetas de Crédito</h1>
+              <h2>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</h2>
+              <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 img-fluid" src="assets/img/slider/2.jpg" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="sombra-blanco"> First slide label</h2>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        class="d-block w-100 img-fluid"
+        src="assets/img/slider/2.jpg"
+        alt="Second slide"
+      />
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Cripto Monedas</h1>
+        <h2>Bitcoin​ ​ es un protocolo, proyecto de código abierto y red peer-to-peer que se utiliza como criptomoneda, sistema de pago​ y mercancía.​​Fue concebida en 2008, ​ por una entidad conocida bajo el seudónimo de Satoshi Nakamoto, cuya identidad concreta se desconoce.</h2>
+        <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 img-fluid" src="assets/img/slider/1.jpg" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="sombra-negra">First slide label</h2>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        class="d-block w-100 img-fluid"
+        src="assets/img/slider/1.jpg"
+        alt="Third slide"
+      />
+      <div class="carousel-caption d-none d-md-block" >
+        <h1 style="opacity:1 !important;">Seguro de Autos</h1>
+              <h2>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.</h2>
+              <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
-      <!-- <div class="carousel-item">
+    </div>
+    <!-- <div class="carousel-item">
         <img class="d-block w-100 img-fluid" src="assets/img/background/bg5.jpg" alt="Third slide">
       </div> -->
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
+  <a
+    class="carousel-control-prev"
+    href="#carouselExampleIndicators"
+    role="button"
+    data-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#carouselExampleIndicators"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
