--- a/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
+++ b/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
@@ -37,15 +37,14 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12">
-      <app-tarjetav2></app-tarjetav2>
+
+    <div 
+      class="col-12" 
+      *ngFor = "let tajeta of arrayTarjetas"
+      >
+      <app-tarjetav2 [tarjeta] ="tajeta"></app-tarjetav2>
     </div>
-    <div class="col-12">
-      <app-tarjetav2></app-tarjetav2>
-    </div>
-    <div class="col-12">
-      <app-tarjetav2></app-tarjetav2>
-    </div>
+
   </div>
 </div>
 
