--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,91 +1,109 @@
 <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
   <a class="navbar-brand" href="#">
-    <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-    Bootstrap
+    <img
+      src="assets/img/credit_online_7.png"
+      width="200"
+      height="66"
+      class="d-inline-block align-top"
+      alt=""
+      loading="lazy"
+    />
   </a>
-</nav>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow p-3 mb-5 bg-white rounded">
-  <!-- <a matRipple matRippleCentered = "true" class="navbar-brand" href="#"> <strong class="credit-text-color-primary">
-    Crédito</strong>   <i class="credit-text-color-second">OnLine</i> 
-  </a> -->
-
-  <a class="navbar-brand" href="#">
-    <img src="assets/img/credit_online_7.png" width="200" height="66" class="d-inline-block align-top" alt="" loading="lazy">    
-  </a>
-
-
-  <button matRipple class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item" routerLinkActive ="active" >
-        <!-- <a 
-          class="nav-link" 
-          routerLink = "/home">Home <span class="sr-only">(current)</span></a>
-      </li> -->
-     
-      <li 
-        class="nav-item dropdown" 
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li
+        class="nav-item dropdown hvr-sweep-to-right"
         mat-ripple
         matRippleCentered="true"
-        routerLinkActive="active">
-        <a class="nav-link " 
-        routerLink = "/tarjetas"
-          id="navbarDropdownMenuLink" 
-          role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        routerLinkActive="active"
+      >
+        <a
+          class="nav-link"
+          routerLink="/tarjetas"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
           Tarjetas de Crédito
         </a>
         <!-- <div   
-          class="dropdown-menu  animate__animated animate__fadeInDown animate__faster" 
-          aria-labelledby="navbarDropdownMenuLink">
-          <a 
-            matRipple 
-            matRippleCentered = "true"
-            class="dropdown-item" 
-            routerLink = "/tarjetas">Shop credit Card</a>
-          <a 
-            matRipple 
-            matRippleCentered = "true"
-            class="dropdown-item" 
-            href="#">Business card</a>
-          <a 
-            matRipple 
-            matRippleCentered = "true"
-            class="dropdown-item" 
-            href="#">Travel card</a>
-        </div> -->
+        class="dropdown-menu  animate__animated animate__fadeInDown animate__faster" 
+        aria-labelledby="navbarDropdownMenuLink">
+        <a 
+          matRipple 
+          matRippleCentered = "true"
+          class="dropdown-item" 
+          routerLink = "/tarjetas">Shop credit Card</a>
+        <a 
+          matRipple 
+          matRippleCentered = "true"
+          class="dropdown-item" 
+          href="#">Business card</a>
+        <a 
+          matRipple 
+          matRippleCentered = "true"
+          class="dropdown-item" 
+          href="#">Travel card</a>
+      </div> -->
       </li>
-
-      
-      <!-- <li 
-        class="nav-item dropdown"
-        mat-ripple
-        matRippleCentered="true">
-        <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Autos
-        </a>
-        <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div> 
-      </li> -->
-      <li 
-        mat-ripple
-        matRippleCentered="true"
-        class="nav-item dropdown">
-        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Prestamos
+      <li mat-ripple matRippleCentered="true" class="nav-item dropdown">
+        <a
+          class="nav-link"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Préstamos
         </a>
         <!-- <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div> -->
+      <a class="dropdown-item" href="#">Action</a>
+      <a class="dropdown-item" href="#">Another action</a>
+      <a class="dropdown-item" href="#">Something else here</a>
+    </div> -->
+      </li>
+
+      <li mat-ripple matRippleCentered="true" class="nav-item dropdown">
+        <a
+          class="nav-link"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Seguros
+        </a>
       </li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+     
+      <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">
+       Iniciar sesión
+      </button>
+      <button class="btn btn-success my-2 my-sm-0" type="submit">
+       Registrarse
+      </button>
+    </form>
   </div>
 </nav>
