--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,13 +1,19 @@
 <app-carausel></app-carausel>
 <app-servs></app-servs>
-
-<!-- <app-about></app-about> -->
+<!-- 
+<app-about></app-about> -->
 
 <!--PARALLAX-->
 
 <section class="parallax pt-5" id="secction1"> </section>
 
 <!-- /PARALLAX-->
+
+<!-- Pasos para obtener tu crédito -->
+
+<app-pasos></app-pasos>
+
+<!--/ Pasos para obtener tu crédito 
 
 <div class="container marketing mt-5">
   <div class="row featurette mt-5">
@@ -71,9 +77,10 @@
     </div>
   </div>
 </div>
-
+-->
+<!--
 <section class="parallax mt-5" id="secction2"></section>
-
+-->
 <app-precio></app-precio>
 
 <app-footer></app-footer>
