--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -7,7 +7,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img
-        class="d-block w-100 img-fluid"
+        class="d-block img-fluid"
         src="assets/img/slider/4.jpg"
         alt="First slide"
       />
@@ -19,7 +19,7 @@
     </div>
     <div class="carousel-item">
       <img
-        class="d-block w-100 img-fluid"
+        class="d-block  img-fluid"
         src="assets/img/slider/2.jpg"
         alt="Second slide"
       />
@@ -31,7 +31,7 @@
     </div>
     <div class="carousel-item">
       <img
-        class="d-block w-100 img-fluid"
+        class="d-block img-fluid"
         src="assets/img/slider/1.jpg"
         alt="Third slide"
       />
