formulario de registro

--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -13,32 +13,52 @@
       />
       <div class="carousel-caption d-none d-md-block">
         <h1>Tarjetas de Crédito</h1>
-              <h2>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</h2>
-              <a href="#about" class="btn-get-started scrollto">Solicitar</a>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img
-        class="d-block  img-fluid"
-        src="assets/img/slider/2.jpg"
-        alt="Second slide"
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Cripto Monedas</h1>
-        <h2>Bitcoin​ ​ es un protocolo, proyecto de código abierto y red peer-to-peer que se utiliza como criptomoneda, sistema de pago​ y mercancía.​​Fue concebida en 2008, ​ por una entidad conocida bajo el seudónimo de Satoshi Nakamoto, cuya identidad concreta se desconoce.</h2>
+        <h2>
+          Lorem Ipsum es simplemente el texto de relleno de las imprentas y
+          archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de
+          las industrias desde el año 1500
+        </h2>
         <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
     <div class="carousel-item">
       <img
-        class="d-block img-fluid"
-        src="assets/img/slider/1.jpg"
-        alt="Third slide"
+        class="d-block img-fluid w-100"
+        src="assets/img/slider/2.jpg"
+        alt="Second slide"
       />
-      <div class="carousel-caption d-none d-md-block" >
-        <h1 style="opacity:1 !important;">Seguro de Autos</h1>
-              <h2>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.</h2>
-              <a href="#about" class="btn-get-started scrollto">Solicitar</a>
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Prestamos</h1>
+        <h2>
+          Bitcoin​ ​ es un protocolo, proyecto de código abierto y red
+          peer-to-peer que se utiliza como criptomoneda, sistema de pago​ .
+        </h2>
+        <a href="#about" class="btn-get-started scrollto">Solicitar</a>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <!-- <picture>
+        <source srcset="assets/img/slider/1.jpg.jpg" media="(max-min: 400px)">
+        <source srcset="assets/img/slider/1.jpg.jpg" media="(max-min: 800px)">
+        <img
+          class="d-block img-fluid"
+          src="assets/img/slider/1.jpg"
+          alt="Third slide"
+        />
+      </picture> -->
+      <img
+          class="d-block img-fluid"
+          src="assets/img/slider/1.jpg"
+          alt="Third slide"
+        />
+      <div class="carousel-caption d-none d-md-block">
+        <h1 style="opacity: 1 !important">Seguro de Autos</h1>
+        <h2>
+          Es un hecho establecido hace demasiado tiempo que un lector se
+          distraerá con el contenido del texto de un sitio mientras que mira su
+          diseño.
+        </h2>
+        <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
     <!-- <div class="carousel-item">
@@ -64,4 +84,3 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
