--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,6 +1,5 @@
 <!-- Image and text -->
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
   <a class="navbar-brand" href="#">
     <img
@@ -97,13 +96,96 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-     
       <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">
-       Iniciar sesión
+        Iniciar sesión
       </button>
-      <button class="btn btn-success my-2 my-sm-0" type="submit">
-       Registrarse
+      <button
+        class="btn btn-success my-2 my-sm-0"
+        type="button"
+        data-toggle="modal"
+        data-target="#exampleModal"
+      >
+        Registrarse
       </button>
     </form>
   </div>
 </nav>
+
+
+<form>
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Registro</h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">Nombre</label>
+              <input type="email" class="form-control" id="inputEmail4" />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword4">Apellido</label>
+              <input type="password" class="form-control" id="inputPassword4" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputAddress">Correo</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputAddress"
+              placeholder="micorreo@correo.com"
+            />
+          </div>
+          <div class="form-group">
+            <label for="inputAddress2">Contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              id="inputAddress2"
+              placeholder=""
+            />
+          </div>
+          <div class="form-group">
+            <label for="inputAddress2">Repetir Contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              id="inputAddress2"
+              placeholder=""
+            />
+          </div>
+          
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            data-dismiss="modal"
+          >
+            Cerrar
+          </button>
+          <button type="button" class="btn btn-success">
+            Guardar <i class="fa fa-floppy-o"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
