color verde en botón

--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -28,7 +28,7 @@
         alt="Second slide"
       />
       <div class="carousel-caption d-none d-md-block">
-        <h1>Prestamos</h1>
+        <h1>Préstamos</h1>
         <h2>
           Bitcoin​ ​ es un protocolo, proyecto de código abierto y red
           peer-to-peer que se utiliza como criptomoneda, sistema de pago​ .
