--- a/src/app/pages/home/carausel/carausel.component.scss
+++ b/src/app/pages/home/carausel/carausel.component.scss
@@ -56,8 +56,8 @@ h2 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #e03a3c;
-  border: 2px solid #e03a3c;
+  background: #28a745;
+  border: 2px solid #28a745;
 }
 
 .btn-get-started:hover {
