--- a/src/app/pages/home/servs/servs.component.html
+++ b/src/app/pages/home/servs/servs.component.html
@@ -122,7 +122,7 @@
                 <a class="services-icon" href="#">
                   <i class="fa fa-book"></i>
                 </a>
-                <h4 class="credit-text-color-primary">Asesoria financiera</h4>
+                <h4 class="credit-text-color-primary">Asesoría financiera</h4>
                 <p class="text-justify">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
