--- a/src/app/components/tc/tarjetav2/tarjetav2.component.html
+++ b/src/app/components/tc/tarjetav2/tarjetav2.component.html
@@ -1,14 +1,15 @@
 <br />
 <div 
-    class="card mb-3 w-100" 
+    class="card mb-3 w-100 animate__animated animate__fadeInDown animate__faster" 
     (mouseover)  = "mouseIsOver = true"
     (mouseleave) = "mouseIsOver = false"
     [ngClass]  = "{ 'tc-over' : mouseIsOver, 'tc-not-over': ! mouseIsOver }">
+    
   <div class="row">
     <div class="col-lg-3 col-md-3 center">
       <div class="card m-3" style=" border: none !important">
         <img
-          [src]="tarjeta.urlImagen"
+          [src]="tarjeta.imagen"
           class="card-img-top"
           alt="..."
         />
@@ -30,16 +31,15 @@
     </div>
     <div class="col-lg-9 col-md-9 col-sm-12 p-5">
       <h4>{{ tarjeta.banco }}</h4>
-      <h3>{{ tarjeta.tarjeta }}</h3>
+      <h3>{{ tarjeta.nombre }}</h3>
       <p class="font-weight-lighter text-justify font-">
           <small>
-          
-      {{tarjeta.descripcion}}
+            descripción de la tarjeta
           </small>
       </p>
       <hr />
       <div class="row">
-        <div class="col-md-4 border-left ">
+        <div class="col-md-6 border-left ">
           <ul class="text-muted">
             <li>
               <i class="fa fa-check credit-text-color-second"></i>
@@ -51,7 +51,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4 border-left ">
+        <div class="col-md-6 border-left ">
           <ul class="text-muted">
                 <li>
                   <i class="fa fa-check credit-text-color-second"></i>
@@ -63,14 +63,14 @@
                 </li>
               </ul>
         </div>
-        <div class="col-md-4 border-left">
+        <!-- <div class="col-md-4 border-left">
           <ul class="text-muted">
                 <li>
                   <i class="fa fa-check credit-text-color-second"></i>
                   <small> Paga en miles de comercios en todo el mundo</small>
                 </li>
               </ul>
-        </div>
+        </div> -->
        
       </div>
     </div>
