--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -72,7 +72,7 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          Préstamos
+          Préstamos Personales
         </a>
         <!-- <div class="dropdown-menu animate__animated animate__fadeInDown animate__faster" aria-labelledby="navbarDropdownMenuLink">
       <a class="dropdown-item" href="#">Action</a>
@@ -91,7 +91,20 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          Seguros
+          Préstamos Hipotecarios
+        </a>
+      </li>
+      <li mat-ripple matRippleCentered="true" class="nav-item dropdown">
+        <a
+          class="nav-link"
+          href="#"
+          id="navbarDropdownMenuLink"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Seguro de Auto
         </a>
       </li>
     </ul>
