--- a/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/app/shared/toolbar/toolbar.component.scss
@@ -4,7 +4,7 @@
 
 .nav-link {
     color: black !important;
-    font-size: 20px;
+    text-shadow: 1px 1px 2px lightgray;
 }
 
 /* Sweep To Right */
