Ajustes Varios Versión 2
- Ajustes en sección tarjeta
se ajustó espacio
se ajustó el titulo
- Ajustes en pagina pincipal
ajustes en tamaño de texto en caraucel
se quita la sección de precios
- Opciones del menu
se agrean nuevas opciones en el menú superior
- Footer
Se agrega imagen

wq

--- a/src/app/pages/home/carausel/carausel.component.html
+++ b/src/app/pages/home/carausel/carausel.component.html
@@ -12,11 +12,10 @@
         alt="First slide"
       />
       <div class="carousel-caption d-none d-md-block">
-        <h1>Tarjetas de Crédito</h1>
-        <h2>
-          Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-          archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de.
-        </h2>
+        <h1>Tarjeta de Crédito</h1>
+        <h5>
+          Revisa y compara las tarjetas de acuerdo con tus necesidades.
+        </h5>
         <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
@@ -27,11 +26,10 @@
         alt="Second slide"
       />
       <div class="carousel-caption d-none d-md-block">
-        <h1>Préstamos</h1>
-        <h2>
-          Bitcoin​ ​ es un protocolo, proyecto de código abierto y red
-          peer-to-peer que se utiliza como criptomoneda, sistema de pago​ .
-        </h2>
+        <h1>Crédito Hipotecario</h1>
+        <h5>
+          Revisa y compara las tasas de interés para tu préstamo en un solo lugar.
+        </h5>
         <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
@@ -51,12 +49,10 @@
           alt="Third slide"
         />
       <div class="carousel-caption d-none d-md-block">
-        <h1 style="opacity: 1 !important">Seguro de Autos</h1>
-        <h2>
-          Es un hecho establecido hace demasiado tiempo que un lector se
-          distraerá con el contenido del texto de un sitio mientras que mira su
-          diseño.
-        </h2>
+        <h1 style="opacity: 1 !important">Seguro de Auto</h1>
+        <h5>
+          Revisa y compara la mejor opción para proteger tu auto
+        </h5>
         <a href="#about" class="btn-get-started scrollto">Solicitar</a>
       </div>
     </div>
