--- a/src/app/pages/home/pasos/pasos.component.html
+++ b/src/app/pages/home/pasos/pasos.component.html
@@ -11,10 +11,9 @@
             <div class="count-box">
               <i class="fa fa-file-text-o"></i>
               <span data-toggle="counter-up">1</span>
-              <h5 data-toggle="counter-up">Solicita simple y 100% online</h5>
+              <h5 data-toggle="counter-up">Consulta y Compara</h5>
               <p>
-                Ingresa tus datos principales y precalificas inmediatamente.
-                Completas la solicitud online y te damos respuesta inmediata.
+                Consulta, comprara y selecciona el crédito o seguro que más se adapte a tus necesidades.
               </p>
             </div>
           </div>
@@ -23,10 +22,9 @@
             <div class="count-box">
               <i class="fa fa-users mb-5"></i>
               <span data-toggle="counter-up">2</span>
-              <h5 data-toggle="counter-up">Solicita simple y 100% online</h5>
+              <h5 data-toggle="counter-up">Llena tu solicitud</h5>
               <p>
-                Ingresa tus datos principales y precalificas inmediatamente.
-                Completas la solicitud online y te damos respuesta inmediata.
+                Llena y paga tu solicitud totalmente en línea. Todos nuestros trámites en línea son 100% seguros.
               </p>
             </div>
           </div>
@@ -35,10 +33,9 @@
             <div class="count-box">
               <i class="fa fa-money"></i>
               <span data-toggle="counter-up">3</span>
-              <h5 data-toggle="counter-up">Solicita simple y 100% online</h5>
+              <h5 data-toggle="counter-up">Recibe la respuesta de tu solicitud.</h5>
               <p>
-                Ingresa tus datos principales y precalificas inmediatamente.
-                Completas la solicitud online y te damos respuesta inmediata.
+                Si tu trámite es aprobado, recibe la autorización de tu solicitud y disfruta los beneficios.
               </p>
             </div>
           </div>
