--- a/src/app/pages/home/servs/servs.component.html
+++ b/src/app/pages/home/servs/servs.component.html
@@ -81,7 +81,7 @@
                 <a class="services-icon" href="#">
                   <i class="fa fa-heartbeat"></i>
                 </a>
-                <h4 class="credit-text-color-primary">Seguros de Vida</h4>
+                <h4 class="credit-text-color-primary">Seguro de Vida</h4>
                 <p class="text-justify ">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
@@ -120,9 +120,9 @@
             <div class="services-details">
               <div class="single-services">
                 <a class="services-icon" href="#">
-                  <i class="fa fa-book"></i>
+                  <i class="fa fa-car"></i>
                 </a>
-                <h4 class="credit-text-color-primary">Asesoría financiera</h4>
+                <h4 class="credit-text-color-primary">Seguro de auto</h4>
                 <p class="text-justify">
                   will have to make sure the prototype looks finished by
                   inserting text or photo.make sure the prototype looks finished
