--- a/src/app/pages/home/footer/footer.component.html
+++ b/src/app/pages/home/footer/footer.component.html
@@ -6,7 +6,8 @@
             <div class="footer-content">
               <div class="footer-head">
                 <div class="footer-logo">
-                  <h2>Créditos</h2>
+                  <!-- <h2>Créditos</h2> -->
+                  <img src="./assets/img/logo/credit_online_7_blanco2.png" alt="..." class="img-fluid">
                 </div>
 
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
@@ -33,13 +34,15 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
+                <h4>Contacto</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                  Richard E Byrd 132 Col Cima del Bosque, Monterrey, Nuevo León, México. C.P. 64349
+
+
                 </p>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> 811 1234567</p>
-                  <p><span>Email:</span> credito@credito.com</p>
+                  <p>  (+52) 81 1467 7899</p>
+                  <p> contacto@creditonline.com.mx</p>
                 </div>
               </div>
             </div>
