--- a/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
+++ b/src/app/pages/ofertas/tarjetacredito/tarjetacredito.component.html
@@ -1,19 +1,25 @@
-
-<div class="content mt-5">
+<div class="content" style="margin-top: 5% !important">
   <div class="row mt-5 p-5">
     <div class="col">
-      <h3 class="credit-text-color-primary">Tarjetas de Crédito</h3>
-
       <!-- INGRESO MENSUAL -->
       <mat-card class="mb-3">
         <div class="row">
+          <div class="col-12">
+            <h4 class="credit-text-color-primary">Tarjetas de Crédito</h4>
+            <hr />
+            <span class="bd-content-title mb-5">
+              Selecciona tu ingreso mensual y las tarjetas de crédito que deseas
+              solicitar y da click en Continuar.
+            </span>
+          </div>
+        </div>
+        <div class="row mt-5">
           <div class="col-md-2 col-sm-12">
-            <p>
-              Ingreso mensual:
-              <strong class="credit-text-color-second">
+           
+              <h3 class="credit-text-color-primary">
                 {{ ingreso | currency: "USD" }}
-              </strong>
-            </p>
+              </h3>
+            
           </div>
           <div class="col-md-10 col-sm-12">
             <mat-slider
@@ -31,23 +37,12 @@
       <!--/ INGRESO MENSUAL -->
     </div>
   </div>
-
- 
 </div>
 
 <div class="container">
   <div class="row">
-
-    <div 
-      class="col-12" 
-      *ngFor = "let tajeta of tarjetas"
-      >
-      <app-tarjetav2 [tarjeta] ="tajeta"  ></app-tarjetav2>
+    <div class="col-12" *ngFor="let tajeta of tarjetas">
+      <app-tarjetav2 [tarjeta]="tajeta"></app-tarjetav2>
     </div>
-
   </div>
 </div>
-
-
-
-
