--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -82,5 +82,6 @@
 <section class="parallax mt-5" id="secction2"></section>
 -->
 
+<app-seccion-seguridad></app-seccion-seguridad>
 
 <app-footer></app-footer>
