--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <!-- Image and text -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top topbar">
   <a class="navbar-brand" href="#">
     <img
       src="assets/img/credit_online_8.png"
@@ -33,7 +33,7 @@
         routerLinkActive="active"
       >
         <a
-          class="nav-link"
+          class="nav-link nav-link-hover"
           routerLink="/tarjetas"
           id="navbarDropdownMenuLink"
           role="button"
@@ -48,7 +48,7 @@
       <!-- 2 Prestamos Personales -->
       <li mat-ripple matRippleCentered="true" class="nav-item dropdown">
         <a
-          class="nav-link"
+          class="nav-link nav-link-hover"
           href="#"
           id="navbarDropdownMenuLink"
           role="button"
@@ -63,7 +63,7 @@
       <!-- 3 Prestamos Automotriz -->
       <li mat-ripple matRippleCentered="true" class="nav-item dropdown">
         <a
-          class="nav-link"
+          class="nav-link nav-link-hover"
           href="#"
           id="navbarDropdownMenuLink"
           role="button"
@@ -78,7 +78,7 @@
       <!-- 4 Prestamo Hipotecario -->
       <li mat-ripple matRippleCentered="true" class="nav-item dropdown">
         <a
-          class="nav-link"
+          class="nav-link nav-link-hover"
           href="#"
           id="navbarDropdownMenuLink"
           role="button"
@@ -93,7 +93,7 @@
       <!-- 5 Seguros -->
       <li class="nav-item dropdown">
         <a
-          class="nav-link dropdown-toggle"
+          class="nav-link nav-link-hover dropdown-toggle"
           href="#"
           id="navbarDropdownMenuLink"
           role="button"
@@ -116,7 +116,16 @@
         </div>
       </li> <!-- 5 Seguros -->
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+
+     <!--Carrito de compras-->
+      <app-carrito-toolbar></app-carrito-toolbar>  
+   
+    <!--/Carrito de compras-->
+
+    <div class="topbar-divider d-none d-sm-block"></div>
+
+    <div class="form-inline my-2 my-lg-0">
+
       <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit">
         Iniciar sesión
       </button>
@@ -128,7 +137,7 @@
       >
         Registrarse
       </button>
-    </form>
+    </div>
   </div>
 </nav>
 
