--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,36 @@
+:root {
+  --blue: #4e73df;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #e74a3b;
+  --orange: #fd7e14;
+  --yellow: #f6c23e;
+  --green: #1cc88a;
+  --teal: #20c9a6;
+  --cyan: #36b9cc;
+  --white: #fff;
+  --gray: #858796;
+  --gray-dark: #5a5c69;
+  --primary: #4e73df;
+  --secondary: #858796;
+  --success: #1cc88a;
+  --bsuccess: #28a745; //bootstrap success
+  --info: #36b9cc;
+  --warning: #f6c23e;
+  --danger: #e74a3b;
+  --light: #f8f9fc;
+  --dark: #5a5c69;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+
 $credit-color-principal: #0062e6;
 $credit-color-pricipal-primary: $credit-color-principal;
 $credit-color-pricipal-second: rgba(
@@ -71,4 +104,15 @@ body {
   transition: background 0s;
 }
 
+.background-color-success {
+  background: var(--success);
+}
 
+.success-snackbar {
+  color: var(--white) !important;
+  background: var(--bsuccess);
+}
+
+.mat-button-wrapper {
+  color: var(--white) !important;
+}
